fix transaction duplications by filtering by description